Controller documentation complete